--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.layout{
+.layout {
   margin-left: auto;
   margin-right: auto;
   max-width: 42rem;
@@ -27,7 +27,7 @@ code {
   z-index: 1000;
 }
 
-.blog-header .blog-logo a{
+.blog-header .blog-logo a {
   color: #fff;
   font-size: 20px;
   font-weight: bold;
@@ -36,7 +36,13 @@ code {
 
 .blog-content {
   min-height: calc(100vh - 160px);
-  padding-top: 50px;
+}
+
+.form {
+  padding-top: 74px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 42rem;
 }
 
 .article-content {
@@ -46,10 +52,10 @@ code {
   background: #f7f7f7;
 }
 
-.article-content .article-title a{
+.article-content .article-title a {
   font-size: 1.75rem;
   font-weight: bold;
-  background: linear-gradient(90deg,#ff8a00,#e52e71);
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-box-decoration-break: clone;
@@ -60,7 +66,7 @@ code {
 .blog-footer {
   text-align: center;
   line-height: 50px;
-  color: rgba(0,0,0,.65);
+  color: rgba(0, 0, 0, 0.65);
 }
 
 .layout-header {
@@ -70,34 +76,45 @@ code {
 }
 
 .checkbox {
-	
+}
+
+.tabs button {
+  background: #021529;
+  color: #fff;
+  border: none;
+  outline: none;
+  font-size: 17px;
+  cursor: pointer;
+}
+.app.dark .tabs button {
+  background: #282c35;
 }
 
 .custom-checkbox {
-	position: relative;
-	cursor: pointer;
-	display: block;
-	line-height: 20px;
+  position: relative;
+  cursor: pointer;
+  display: block;
+  line-height: 20px;
 }
 
 .custom-checkbox-button {
-	display: block;
-	margin: 0 25px;
-	width: 35px;
-	border-radius: 12px;
-	background: rgb(118, 118, 118);
-	height: 20px;
-	position: relative;
-	bottom: -4px;
-	cursor: pointer;
+  display: block;
+  margin: 0 25px;
+  width: 35px;
+  border-radius: 12px;
+  background: rgb(118, 118, 118);
+  height: 20px;
+  position: relative;
+  bottom: -4px;
+  cursor: pointer;
 }
 
 .custom-checkbox-button:before {
   position: absolute;
-	top: 0px;
-	left: -1px;
-	-webkit-transition: 0.2s;
-	transition: 0.2s;
+  top: 0px;
+  left: -1px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .custom-checkbox.checked .custom-checkbox-button:before {
@@ -114,7 +131,7 @@ code {
 }
 
 .custom-checkbox.checked .custom-checkbox-button {
-  background: linear-gradient(90deg,#ff8a00,#e52e71);
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
 }
 
 /* Dark theme */
@@ -126,12 +143,12 @@ code {
   background: #282c35;
 }
 
-.app.dark .article-content{
+.app.dark .article-content {
   background: #282c35;
   color: #fff;
 }
 
-.app.dark .blog-footer{
+.app.dark .blog-footer {
   color: #fff;
 }
 
@@ -141,41 +158,43 @@ code {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
-.loader span{
+.loader span {
   display: inline-block;
   width: 15px;
   height: 15px;
   border-radius: 100%;
-  background: linear-gradient(90deg,#ff8a00,#e52e71);
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
   margin: 35px 5px;
 }
 
-.loader span:nth-child(1){
+.loader span:nth-child(1) {
   animation: bounce 1s ease-in-out infinite;
 }
 
-.loader span:nth-child(2){
+.loader span:nth-child(2) {
   animation: bounce 1s ease-in-out 0.33s infinite;
 }
 
-.loader span:nth-child(3){
+.loader span:nth-child(3) {
   animation: bounce 1s ease-in-out 0.66s infinite;
 }
 
-@keyframes bounce{
-  0%, 75%, 100%{
+@keyframes bounce {
+  0%,
+  75%,
+  100% {
     -webkit-transform: translateY(0);
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
     transform: translateY(0);
   }
 
-  25%{
+  25% {
     -webkit-transform: translateY(-20px);
     -ms-transform: translateY(-20px);
     -o-transform: translateY(-20px);
@@ -208,6 +227,6 @@ code {
   color: #8f969c;
 }
 
-.plus.like:before{
+.plus.like:before {
   color: red;
 }
